# Auto-calibration

./: README.md
Document/report/: overview.tex
Document/report/report_imgs/10/: inner_T.txt  inner_polygon.txt  output.txt
Document/report/report_imgs/10/intersections/: 5.txt  inner_T.txt  inner_polygon.txt
Document/report/report_imgs/10/physical/: inner_polygon.txt
Document/report/report_imgs/2/: inner_T.txt  inner_polygon.txt  output.txt
Document/report/report_imgs/2/intersections/: 2.txt  inner_T.txt  inner_polygon.txt
Document/report/report_imgs/2/physical/: inner_T.txt
Document/report/report_imgs/4/: output.txt
Document/report/report_imgs/8/: inner_T.txt  inner_polygon.txt  output.txt
Document/report/report_imgs/8/intersections/: 3.txt  inner_T.txt  inner_polygon.txt
Document/slides/: Auto-Calibration.pptx  Auto-Calibration2.pptx
Overview/: 2020-2-20.md  2020-5-5.md
System/: param-template.yaml  run.sh
System/src/calibration/: CMakeLists.txt  main.cpp  run.sh  vis_calib.py
System/src/detector/: detector.py
System/src/filter/: CMakeLists.txt  Calibration.cpp  Calibration.h  Kalman_filter.cpp  Kalman_filter.h  main.cpp  run.sh  vis_filter.py
System/src/frame_extractor/: extract_image.py
System/src/line_estimation/: generate_physical.py  improve.py  run.py  shape_matching.py  svd_estimate.py  svd_paral.py  svd_ransac.py  utils.py
System/src/sub_pixel_edge/: CMakeLists.txt  WriteFile.h  edgeTest.cpp  edgeTest.h  main.cpp
System/src/utils/: shuffle_names.py
